@@ -1,0 +1,128 @@
+/*
+ * $Id$
+ *
+ * :ts=4
+ *
+ * Portable ISO 'C' (1994) runtime library for the Amiga computer
+ * Copyright (c) 2002-2006 by Olaf Barthel <olsen (at) sourcery.han.de>
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ *   - Redistributions of source code must retain the above copyright
+ *     notice, this list of conditions and the following disclaimer.
+ *
+ *   - Neither the name of Olaf Barthel nor the names of contributors
+ *     may be used to endorse or promote products derived from this
+ *     software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+ * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+ * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ *
+ *
+ * PowerPC math library based in part on work by Sun Microsystems
+ * Copyright (C) 1993 by Sun Microsystems, Inc. All rights reserved.
+ *
+ * Developed at SunPro, a Sun Microsystems, Inc. business.
+ * Permission to use, copy, modify, and distribute this
+ * software is freely granted, provided that this notice
+ * is preserved.
+ */
+
+#ifndef _MATH_HEADERS_H
+#include "math_headers.h"
+#endif /* _MATH_HEADERS_H */
+
+/****************************************************************************/
+
+#if defined(FLOATING_POINT_SUPPORT)
+
+/****************************************************************************/
+
+/* Adding a double, x, to 2^52 will cause the result to be rounded based on
+   the fractional part of x, according to the implementation's current rounding
+   mode.  2^52 is the smallest double that can be represented using all 52 significant
+   digits. */
+static const double TWO52[2]={
+  4.50359962737049600000e+15, /* 0x43300000, 0x00000000 */
+ -4.50359962737049600000e+15, /* 0xC3300000, 0x00000000 */
+};
+
+/****************************************************************************/
+
+long long int
+llrint(double x)
+{
+  LONG i0,j0,sx;
+  ULONG i1;
+  double t;
+  volatile double w;
+  long long int result;
+  
+  EXTRACT_WORDS(i0,i1,x);
+
+  /* Extract sign bit. */
+  sx = (i0>>31)&1;
+
+  /* Extract exponent field. */
+  j0 = ((i0 & 0x7ff00000) >> 20) - 1023;
+  
+  if(j0 < 20)
+    {
+      if(j0 < -1)
+        return 0;
+      else
+        {
+          w = TWO52[sx] + x;
+          t = w - TWO52[sx];
+          GET_HIGH_WORD(i0, t);
+          /* Detect the all-zeros representation of plus and
+             minus zero, which fails the calculation below. */
+          if ((i0 & ~(1 << 31)) == 0)
+              return 0;
+          j0 = ((i0 & 0x7ff00000) >> 20) - 1023;
+          i0 &= 0x000fffff;
+          i0 |= 0x00100000;
+          result = i0 >> (20 - j0);
+        }
+    }
+  else if (j0 < (int)(8 * sizeof (long long int)) - 1)
+    {
+      if (j0 >= 52)
+        result = ((long long int) ((i0 & 0x000fffff) | 0x0010000) << (j0 - 20)) | 
+                   (i1 << (j0 - 52));
+      else
+        {
+          w = TWO52[sx] + x;
+          t = w - TWO52[sx];
+          EXTRACT_WORDS (i0, i1, t);
+          j0 = ((i0 & 0x7ff00000) >> 20) - 1023;
+          i0 &= 0x000fffff;
+          i0 |= 0x00100000;
+          result = ((long long int) i0 << (j0 - 20)) | (i1 >> (52 - j0));
+        }
+    }
+  else
+    {
+      return (long long int) x;
+    }
+  
+  return sx ? -result : result;
+}
+
+/****************************************************************************/
+
+#endif /* FLOATING_POINT_SUPPORT */
+
+ 	  	 
